anime js animation

--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfect Grid</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>Start</h1>
+    <div id="tiles-container"></div>
+
+    <h1 id="title" class="centered">
+        Front End Web Developer
+        <span class="fancy">Ramazan</span>.
+    </h1>
+
+    <script src="index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/animejs@3.0.1/lib/anime.min.js"></script>
 </body>
+
 </html>
