--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <div id="tiles-container"></div>
 
     <h1 id="title" class="centered">
-        Front End Web Developer
-        <span class="fancy">Ramazan</span>.
+        Front End Web Developer Ramazan
     </h1>
 
     <script src="index.js"></script>
